[package]
edition = "2021"
name = "untitled-jam-game"
version = "0.1.0"

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = "0.23.4"
bevy_ecs_tilemap = { git = "https://github.com/rparrett/bevy_ecs_tilemap", branch = "bevy13" }
bevy_kira_audio = { version = "0.19.0", features = ["wav"] }
bevy_pkv = "0.10.0"
bevy_rapier2d = "0.25.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"

[features]
# N.b. we may need to disable the default features when building wasm.
default = ["dynamic"]
dynamic = ["bevy/dynamic_linking"]
